test_cases/tests/bevy/system_missmatch.stderr
error[E0277]: the trait bound `A: WorldQuery` is not satisfied
   --> tests/bevy/system_missmatch.rs:67:45
    |
67  | fn missing_reference_in_query_system(query: Query<A, With<B>>) {}
    |                                             ^^^^^^^^^^^^^^^^^ the trait `WorldQuery` is not implemented for `A`
    |
    = help: the following other types implement trait `WorldQuery`:
              &T
              &mut T
              ()
              (F0, F1)
              (F0, F1, F2)
              (F0, F1, F2, F3)
              (F0, F1, F2, F3, F4)
              (F0, F1, F2, F3, F4, F5)
            and 49 others
note: required by a bound in `bevy::prelude::Query`
   --> $CARGO/bevy_ecs-0.7.0/src/system/query.rs
    |
    | pub struct Query<'world, 'state, Q: WorldQuery, F: WorldQuery = ()>
    |                                     ^^^^^^^^^^ required by this bound in `bevy::prelude::Query`

error[E0271]: type mismatch resolving `for<'w, 's> <ReadFetch<B> as Fetch<'w, 's>>::Item == bool`
   --> tests/bevy/system_missmatch.rs:70:44
    |
70  | fn missing_brackets_in_query_system(query: Query<&A, &B>) {}
    |                                            ^^^^^^^^^^^^^ expected `bool`, found `&B`
    |
    = note: required because of the requirements on the impl of `FilterFetch` for `ReadFetch<B>`
note: required by a bound in `bevy::prelude::Query`
   --> $CARGO/bevy_ecs-0.7.0/src/system/query.rs
    |
    |     F::Fetch: FilterFetch,
    |               ^^^^^^^^^^^ required by this bound in `bevy::prelude::Query`
